fix: room card overflow name

--- a/src/ui/components/Room/styles.css
+++ b/src/ui/components/Room/styles.css
@@ -4,11 +4,21 @@
   align-items: center;
   width: 100%;
   gap: 0.75rem;
+
+  overflow: hidden;
+}
+
+.room__info {
+  display: flex;
+  flex-direction: column;
+
+  overflow: hidden;
 }
 
 .room__name {
-  display: flex;
-  flex-direction: column;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .room__username {
